--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "mourad-boussiouf <mourad.boussiouf@laplateforme.io>",
   "license": "MIT",
   "dependencies": {
-    "phenix-web-sdk": "^2022.0.2"
+    "phenix-web-sdk": "^2022.0.2",
+    "webpack": "^5.76.1",
+    "webpack-cli": "^5.0.1"
   }
 }
