--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "phenixRTS_dummy",
+  "name": "my-webpack-project",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/mourad-boussiouf/phenixRTS_dummy.git",
@@ -10,5 +10,16 @@
     "phenix-web-sdk": "^2022.0.2",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1"
+  },
+  "devDependencies": {
+    "@webpack-cli/generators": "^3.0.1"
+  },
+  "description": "My webpack project",
+  "scripts": {
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   }
 }
