--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
-    "@webpack-cli/generators": "^3.0.1"
+    "@webpack-cli/generators": "^3.0.1",
+    "webpack-dev-server": "^4.12.0"
   },
   "description": "My webpack project",
   "scripts": {
+    "start": "webpack serve --open 'google-chrome'",
     "build": "webpack --mode=development",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
+    "dev": "webpack",
     "serve": "webpack serve"
   }
 }
