--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.1",
+    "typescript": "^5.0.2",
     "webpack-dev-server": "^4.12.0"
   },
   "description": "My webpack project",
