--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.1",
+    "css-loader": "^6.7.3",
     "typescript": "^5.0.2",
     "webpack-dev-server": "^4.12.0"
   },
