--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "html-webpack-plugin": "^5.5.0",
     "phenix-web-sdk": "^2022.0.2",
     "style-loader": "^3.3.2",
-    "webpack": "^5.76.1",
+    "webpack": "~5.76.1",
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
